--- a/login.html
+++ b/login.html
@@ -86,6 +86,7 @@
                                 <li class="tab"><a href= "#signup">Sign Up</a></li>
                               </ul>
                               
+                             <div class="tab-content">
                               <div id="login">   
                                   <h1>Welcome Back!</h1>
                                   
